--- a/Tema 10/Actividades/Actividad10_1.html
+++ b/Tema 10/Actividades/Actividad10_1.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Actividad 10.1 - Consultas en tiempo real</title>
     <script>
-        function selectLista() {
-            var xhttp = new XMLHttpRequest();
-            xhttp.onreadystatechange = function () {
-                if (this.readyState == 4 && this.status == 200) {
-                    let obj = JSON.parse(this.responseText);
-                    var seleccion = "<option disabled selected>Selecciona una persona</option>";
-                    for (var o of obj) {
-                        seleccion += `<option value="${o.id}" id="id-${o.id}">${o.nombre}</option>`;
-                    }
-                    document.getElementById("listaDesplegable").innerHTML = seleccion;
+      // Función "base"
+      function funAjax(url, fun) {
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function () {
+          if (this.readyState == 4 && this.status == 200) {
+            fun(this);
+          }
+        };
+        xhttp.open("GET", url, true);
+        xhttp.send();
+      }
 
-                    // Agrega el event listener después de cargar la lista
-                    document.getElementById("listaDesplegable").addEventListener("change", function () {
-                        tablaDatos(this.value);
-                    });
-                }
-            }
-            xhttp.open("GET", "bd_connect.php?nombresId", true);
-            xhttp.send();
+      // Función lista de selección (select)
+      function selectList(xhttp) {
+        let obj = JSON.parse(xhttp.responseText);
+        var seleccion =
+          "<option disabled selected>Selecciona una persona</option>";
+        for (var o of obj) {
+          seleccion += `<option value="${o.id}" id="id-${o.id}">${o.nombre}</option>`;
         }
+        document.getElementById("listaDesplegable").innerHTML = seleccion;
 
-        function tablaDatos(id) {
-            var xhttp= new XMLHttpRequest();
-            xhttp.onreadystatechange = function (){
-                if(this.readyState==4 && this.status==200){
-                    let obj = JSON.parse(this.responseText);
-                    var tabla = "";
-                    for (o of obj){
-                        if(o.id === Number(id)){
-                            tabla += `
+        // Agrega el event listener después de cargar la lista
+        document
+          .getElementById("listaDesplegable")
+          .addEventListener("change", function(){
+            var id = this.value;
+            funAjax('bd_connect.php',function(xhttp){
+                datosTabla(xhttp,id);
+            })
+          }
+          );
+      }
+
+      // Función tabla con datos de un cliente
+      function datosTabla(xhttp,id){
+        let obj = JSON.parse(xhttp.responseText);
+            var tabla = "";
+            for (o of obj) {
+              if (o.id === Number(id)) {
+                tabla += `
                             <tr>
                             <th>ID</th>
                             <td>${o.id}</td>
@@ -51,25 +62,24 @@
                             <td>${o.ciudad}</td>
                             </tr>
                             `;
-                        }
-                    }
-                    document.getElementById('tabla').innerHTML=tabla;
-                }
+              }
             }
-            xhttp.open("GET", "bd_connect.php", true);
-            xhttp.send();
-        }
+            document.getElementById("tabla").innerHTML = tabla;
+      }
 
-        window.onload = selectLista;
+     
+
+      window.onload = function(){
+        funAjax('bd_connect.php?nombresID',selectList)
+      };
     </script>
-</head>
-<body>
+  </head>
+  <body>
     <h3>Tarea 1 Tema 10</h3>
-    <select id="listaDesplegable">
-    </select>
-    <br>
-    <table id="tabla" border="1">
-       <div>La tabla se cargará aquí....</div>
+    <select id="listaDesplegable"></select>
+    <br />
+    <table id="tabla" border="1px">
+      <div>La tabla se cargará aquí....</div>
     </table>
-</body>
+  </body>
 </html>
