--- a/Tema 10/Actividades/Actividad10_1.html
+++ b/Tema 10/Actividades/Actividad10_1.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Actividad 10.1 - Consultas en tiempo real</title>
     <script>
-      // Función "base"
+      // Función "base", donde crearemos el único objeto AJAX de la actividad
+      // Esta función pasará como parametro la url y una función. Si queremos realizar una conexión a la BBDD, se deberá invocarla
       function funAjax(url, fun) {
         var xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function () {
@@ -17,69 +18,80 @@
         xhttp.send();
       }
 
-      // Función lista de selección (select)
-      function selectList(xhttp) {
-        let obj = JSON.parse(xhttp.responseText);
-        var seleccion =
-          "<option disabled selected>Selecciona una persona</option>";
-        for (var o of obj) {
-          seleccion += `<option value="${o.id}" id="id-${o.id}">${o.nombre}</option>`;
+      // Función lista de selección (select), con los nombres de los clientes
+      function selectNombres(xhttp) {
+        // Parseamos el json recibido por el servidor
+        let objeto = JSON.parse(xhttp.responseText);
+
+        // Añadimos a una variable el elemento con el id deseado
+        var lista = document.getElementById("listaDesplegable");
+
+        // Creamos una variable donde añadimos la opción por defecto, siendo esta deshabilitada
+        var seleccion = "<option disabled selected>Selecciona un cliente</option>";
+
+        // Con el objeto devuelto del servidor, iremos iterando y generando de forma dinamica todas las opciones del select
+        for (var persona of objeto) {
+          seleccion += `<option value="${persona.id}">${persona.nombre}</option>`;
         }
-        document.getElementById("listaDesplegable").innerHTML = seleccion;
 
-        // Agrega el event listener después de cargar la lista
-        document
-          .getElementById("listaDesplegable")
-          .addEventListener("change", function(){
-            var id = this.value;
-            funAjax('bd_connect.php',function(xhttp){
-                datosTabla(xhttp,id);
-            })
-          }
-          );
+        // Añadimos el contenidoi al select
+        lista.innerHTML = seleccion;
+
+        // Agregamos un Event Listener donde cada vez que se cambie de opcion de selección, cargue los datos del cliente
+        lista.addEventListener("change", function () {
+          funAjax(`bd_connect.php?id=${this.value}`, generarTabla);
+        });
       }
 
-      // Función tabla con datos de un cliente
-      function datosTabla(xhttp,id){
-        let obj = JSON.parse(xhttp.responseText);
-            var tabla = "";
-            for (o of obj) {
-              if (o.id === Number(id)) {
-                tabla += `
-                            <tr>
-                            <th>ID</th>
-                            <td>${o.id}</td>
-                            </tr>
-                            <tr>
-                            <th>Nombre</th>
-                            <td>${o.nombre}</td>
-                            </tr>
-                            <tr>
-                            <th>Apellidos</th>
-                            <td>${o.apellidos}</td>
-                            <tr>
-                            <th>Ciudad</th>
-                            <td>${o.ciudad}</td>
-                            </tr>
-                            `;
-              }
-            }
-            document.getElementById("tabla").innerHTML = tabla;
+      // Función encargada de generar una tabla con los datos de clientes, sin necesidad de recargar la página
+      function generarTabla(xhttp) {
+        // Parseamos el json recibido por el servidor
+        let objeto = JSON.parse(xhttp.responseText);
+
+        // Añadimos a una variable el elemento con el id deseado
+        let tablaDatos = document.getElementById("tabla");
+
+        // Vaciamos todo lo que esté en la tabla
+        tablaDatos.innerHTML = "";
+
+        // Creamos una variable donde almacenamos el interior de la tabla
+        var tabla = `
+                <tr>
+                <th>ID</th>
+                <td>${objeto[0].id}</td>
+                </tr>
+                <tr>
+                <th>Nombre</th>
+                <td>${objeto[0].nombre}</td>
+                </tr>
+                <tr>
+                <th>Apellidos</th>
+                <td>${objeto[0].apellidos}</td>
+                <tr>
+                <th>Ciudad</th>
+                <td>${objeto[0].ciudad}</td>
+                </tr>`;
+
+        // Añadimos estilo a la tabla
+        tablaDatos.style.border = "2px solid black";
+        tablaDatos.style.marginTop = "10px";
+
+        // Añadimos el contenido a la tabla
+        tablaDatos.innerHTML = tabla;
       }
 
-     
-
-      window.onload = function(){
-        funAjax('bd_connect.php?nombresID',selectList)
+      // Una vez que cargemos la página, se ejecutará la función selectNombres para tener disponibles los nombres de los clientes
+      window.onload = function () {
+        funAjax("bd_connect.php?nombresId", selectNombres);
       };
     </script>
   </head>
-  <body>
-    <h3>Tarea 1 Tema 10</h3>
+  <body align="center">
+    <h2>Tarea 1 Tema 10</h2>
     <select id="listaDesplegable"></select>
     <br />
-    <table id="tabla" border="1px">
-      <div>La tabla se cargará aquí....</div>
+    <table id="tabla" align="center">
+      <td>La tabla se cargará aquí....</td>
     </table>
   </body>
 </html>
