--- a/Tema 12/ejercicioPrevioExamen/ejerPrevioExamen.html
+++ b/Tema 12/ejercicioPrevioExamen/ejerPrevioExamen.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio Previo al examen (para repasar)</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
     $(function(){
@@ -12,10 +13,32 @@
         var url = "carteras.json";
 
         // Creamos la promesa
-        fetch(url)
-        .then(result => result.json())
-        .then(function(obj){
-            let tabla = document.getElementById('tablaCarteras');
+        // fetch(url)
+        // .then(result => result.json())
+        // .then(function(obj){
+        //     let tabla = document.getElementById('tablaCarteras');
+        //     let disenioTabla = "";
+        //     var total = 0;
+        //     var subtotal = 0;
+        //     disenioTabla += `<tr><th>ID</th><th>Nombre</th><th>Costes</th></tr>`;
+        //     for(var o of obj){
+        //         disenioTabla += `<tr><td>${o.id}</td><td>${o.nombre}</td><td></td></tr>`;
+        //         for (var propiedad in o.costes){
+        //             disenioTabla += `<tr><td></td><td class="elementoHover">${propiedad}</td><td>${o.costes[propiedad]}</td></tr>`;
+        //             subtotal += o.costes[propiedad];
+        //         }
+        //         disenioTabla += `<tr><td></td><td><b>Subtotal</b></td><td>${subtotal.toFixed(2)}</td></tr>`;
+        //         total += subtotal;
+        //         subtotal = 0;
+        //     }
+        //     disenioTabla += `<tr><td></td><td><b>Total</b></td><td>${total}</td></tr>`;
+        //     tabla.innerHTML = disenioTabla;
+        // })
+
+        // Promesas y JQuery
+        $.getJSON(url,
+            function(obj){
+                let tabla = document.getElementById('tablaCarteras');
             let disenioTabla = "";
             var total = 0;
             var subtotal = 0;
@@ -23,7 +46,7 @@
             for(var o of obj){
                 disenioTabla += `<tr><td>${o.id}</td><td>${o.nombre}</td><td></td></tr>`;
                 for (var propiedad in o.costes){
-                    disenioTabla += `<tr><td></td><td>${propiedad}</td><td>${o.costes[propiedad]}</td></tr>`;
+                    disenioTabla += `<tr><td></td><td class="elementoHover">${propiedad}</td><td>${o.costes[propiedad]}</td></tr>`;
                     subtotal += o.costes[propiedad];
                 }
                 disenioTabla += `<tr><td></td><td><b>Subtotal</b></td><td>${subtotal.toFixed(2)}</td></tr>`;
@@ -32,10 +55,10 @@
             }
             disenioTabla += `<tr><td></td><td><b>Total</b></td><td>${total}</td></tr>`;
             tabla.innerHTML = disenioTabla;
-        })
+            });
+
     });
         
-
 
     </script>
 </head>
